updating the challenge to filter bad raw and including comments about the develop of models

--- a/challenge_1.ipynb
+++ b/challenge_1.ipynb
@@ -450,6 +450,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig = raw.plot_sensors()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "id": "9cnZu-V3Aht8"
@@ -1416,12 +1425,14 @@
    "source": [
     "## Building the deep learning model\n",
     "\n",
-    "For neural network models, we employ [braindecode model's](https://braindecode.org/1.2/models/models_table.html) zoo, at the library, we have implemented several different models for decoding the brain timeseries."
+    "For neural network models, **to start**, we suggest using [braindecode models](https://braindecode.org/1.2/models/models_table.html) zoo. We have implemented several different models for decoding the brain timeseries.\n",
+    "\n",
+    "Your team's responsibility is to develop a PyTorch module that receives the three-dimensional (`batch`, `n_chans`, `n_times`) input and outputs the contrastive response time."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -1434,19 +1445,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ATCNet                  AttentionBaseNet        AttnSleep             \n",
-      "BDTCN                   BIOT                    CTNet                 \n",
-      "ContraWR                Deep4Net                DeepSleepNet          \n",
-      "EEGConformer            EEGITNet                EEGInceptionERP       \n",
-      "EEGInceptionMI          EEGMiner                EEGNeX                \n",
-      "EEGNet                  EEGSimpleConv           EEGTCNet              \n",
-      "FBCNet                  FBLightConvNet          FBMSNet               \n",
-      "IFNet                   Labram                  MSVTNet               \n",
-      "SCCNet                  SPARCNet                ShallowFBCSPNet       \n",
-      "SignalJEPA              SignalJEPA_Contextual   SignalJEPA_PostLocal  \n",
-      "SignalJEPA_PreLocal     SincShallowNet          SleepStagerBlanco2020 \n",
-      "SleepStagerChambon2018  SyncNet                 TIDNet                \n",
-      "TSception               USleep                \n"
+      "ATCNet                  AttentionBaseNet        BDTCN                 \n",
+      "BIOT                    CTNet                   ContraWR              \n",
+      "Deep4Net                DeepSleepNet            EEGConformer          \n",
+      "EEGITNet                EEGInceptionERP         EEGInceptionMI        \n",
+      "EEGMiner                EEGNeX                  EEGNetv1              \n",
+      "EEGNetv4                EEGResNet               EEGSimpleConv         \n",
+      "EEGTCNet                FBCNet                  FBLightConvNet        \n",
+      "FBMSNet                 IFNet                   Labram                \n",
+      "MSVTNet                 SCCNet                  SPARCNet              \n",
+      "ShallowFBCSPNet         SignalJEPA              SignalJEPA_Contextual \n",
+      "SignalJEPA_PostLocal    SignalJEPA_PreLocal     SincShallowNet        \n",
+      "SleepStagerBlanco2020   SleepStagerChambon2018  SleepStagerEldele2021 \n",
+      "SyncNet                 TIDNet                  TSceptionV1           \n",
+      "USleep                \n"
      ]
     }
    ],
@@ -2030,7 +2042,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "torch-312",
+   "display_name": "eeg2025",
    "language": "python",
    "name": "python3"
   },
@@ -2044,7 +2056,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.11"
+   "version": "3.11.13"
   }
  },
  "nbformat": 4,
