reducing the number of workers

--- a/challenge_1.ipynb
+++ b/challenge_1.ipynb
@@ -1400,7 +1400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {
     "id": "uTIL4-0NQhrN"
    },
@@ -1410,7 +1410,7 @@
     "from torch.utils.data import DataLoader\n",
     "\n",
     "batch_size = 128\n",
-    "num_workers = 2\n",
+    "num_workers = 1 # We are using a single worker, but you can increase this for faster data loading\n",
     "\n",
     "train_loader = DataLoader(train_set, batch_size=batch_size, shuffle=True, num_workers=num_workers)\n",
     "valid_loader = DataLoader(valid_set, batch_size=batch_size, shuffle=False, num_workers=num_workers)\n",
