--- a/challenge_2.ipynb
+++ b/challenge_2.ipynb
@@ -403,7 +403,8 @@
     "Below, we define a simple EEGNetv4 model from Braindecode.\n",
     "All the braindecode models expect the input to be of shape (batch_size, n_channels, n_times)\n",
     "and have a test coverage about the behavior of the model.\n",
-    "However, you can use any pytorch model you want."
+    "\n",
+    "However, **you can use any pytorch model you want**."
    ]
   },
   {
@@ -444,7 +445,9 @@
    "outputs": [],
    "source": [
     "# Create PyTorch Dataloader\n",
-    "dataloader = DataLoader(windows_ds, batch_size=128, shuffle=True, num_workers=2)\n",
+    "num_workers = 1 # We are using a single worker, but you can increase this for faster data loading\n",
+    "\n",
+    "dataloader = DataLoader(windows_ds, batch_size=128, shuffle=True, num_workers=num_workers)\n",
     "\n",
     "n_epochs = 1\n",
     "\n",
