updating the jupyter notebook

--- a/challenge_1.ipynb
+++ b/challenge_1.ipynb
@@ -3328,6 +3328,26 @@
     "\n",
     "torch.save(model.state_dict(), \"model.pth\")\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Common questions:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1) Do I need to use only braindecode?\n",
+    "\n",
+    "No! You can use any model that gets a tensor as input, outputs a tensor, and implements the forward method.\n",
+    "\n",
+    "2) Can I apply extra preprocessing/dataset loader for the hidden data?\n",
+    "    \n",
+    "No, any transformation needs to be inside your model. but we are super open to contributions to the libraries (eggdash and braindecode) to accommodate any reasonable request.\n"
+   ]
   }
  ],
  "metadata": {
