removing the bad subjects

--- a/challenge_1.ipynb
+++ b/challenge_1.ipynb
@@ -2631,7 +2631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {
     "id": "Wip6B3jUAhuB"
    },
@@ -2645,6 +2645,9 @@
     "seed = 2025\n",
     "\n",
     "subjects = meta_information[\"subject\"].unique()\n",
+    "sub_rm = [\"NDARWV769JM7\", \"NDARME789TD2\", \"NDARUA442ZVF\", \"NDARJP304NK1\",\n",
+    "          \"NDARTY128YLU\", \"NDARDW550GU6\", \"NDARLD243KRE\", \"NDARUJ292JXV\", \"NDARBA381JGH\"]\n",
+    "subjects = [s for s in subjects if s not in sub_rm]\n",
     "\n",
     "train_subj, valid_test_subject = train_test_split(\n",
     "    subjects, test_size=(valid_frac + test_frac), random_state=check_random_state(seed), shuffle=True\n",
@@ -2659,7 +2662,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -2682,6 +2685,7 @@
    "source": [
     "# and finally using braindecode split function, we can do:\n",
     "subject_split = single_windows.split(\"subject\")\n",
+    "\n",
     "train_set = []\n",
     "valid_set = []\n",
     "test_set = []\n",
