--- a/challenge_2.ipynb
+++ b/challenge_2.ipynb
@@ -229,7 +229,8 @@
     "    for release in release_list\n",
     "]\n",
     "print(\"Datasets loaded\")\n",
-    "sub_rm = [\"NDARWV769JM7\"]"
+    "sub_rm = [\"NDARWV769JM7\", \"NDARME789TD2\", \"NDARUA442ZVF\", \"NDARJP304NK1\",\n",
+    "          \"NDARTY128YLU\", \"NDARDW550GU6\", \"NDARLD243KRE\", \"NDARUJ292JXV\", \"NDARBA381JGH\"]"
    ]
   },
   {
